@@ -1,3 +1,11 @@
+2004-05-09(Sun) 03:33:29 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* ndk_manager.rb, ndk_state.rb(nick_succ) :
+	change nick.succ algorithm and timing(always change)
+
+	* ndk_manager.rb : refactoring around nick and away nick
+
+
 2004-05-05(Wed) 17:19:14 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* ndk_version.rb : 0.5.5 prepared
